@@ -13,6 +13,8 @@ IMAP mailbox subscriptions are supported now.
 
 The IMAP user query can be scripted now.
 
+Added built-in support for macOS Keychain.
+
 [1.3.0]
 
 Network timeout handling has been added.
